--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>CURRICULUM VITAE</title>
-    <style>
+    <!-- <style>
       #myDIV {
 
         height: 100px;
@@ -31,203 +31,160 @@
       /* Safari 4.0 - 8.0 */
 
 
-    </style>
+    </style> -->
   </head>
   <body id="haut" >
-    <nav class="navbar navbar-expand-sm navbar-white fixed-top affix" id="navbar">
-      <div class="container-fluid">
-        <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" aria-expanded="true" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>  -->
-        <a  class="navbar-brand page-scroll" href="#haut">Belkhadiri Rihab</a>
-      </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#haut">Belkhadiri Rihab</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-
-      <!-- the start navbar -->
-
-      <div class="container-fluid">
-        <ul class="navbar-nav ml-auto" id="bs-example-navbar-collapse-1">
-
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-
             <a class="nav-link" data-link href="#competences">Compétences</a>
           </li>
-
           <li class="nav-item ">
-
-            <a class="nav-link " data-link href="#formation">MesFormations</a>
-
+            <a class="nav-link " data-link href="#formation">Mes Formations</a>
           </li>
-
           <li class="nav-item">
-
             <a class="nav-link" data-link href="#experiences">Expériences</a>
-
           </li>
           <li class="nav-item">
-
             <a class="nav-link" data-link href="#contact">Contact</a>
-
           </li>
 
+        </ul>
+      </div>
+    </nav>
+
+    <header>
+      <div class="container header-content">
+        <div class=" header-content-inner">
+          <h1  id="myDIV" style="color: wheat;">Développeuse Web</h1>
+          <hr>
+          <p>Devenir une développeuse Web. Je suis prête et motivée pour
+            parfaire mes compétences acquise durant mon L1 Info-Math pour
+            faire de ma passion mon métier.
+          </p>
+          <div class="btn btn-default btn-lg" style="padding-left:530px; padiing: 30px; margin-bottom:50px;">
+            <a href="#about" class="btn btn-default btn-xl hover page-scroll ">Qui suis-je ?</a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="container-fluid bg-dark">
+      <div class="container text-center">
+        <section id="about">
+          <div class="call-to-action">
+            <h2  style="color: wheat; text-align: center; font-family: 'Pacifico', cursive; padding:70px; ">Belkhadiri Rihab - Etudiante en Développement web !</h2>
+            <hr>
+            <p style="font-size: 20px; color: wheat;font-family: 'Merienda', cursive;">J’ai eu un Bac S avec mention trés bien en arabie saudite, J’ai fait un an à la faculté des sciences et technology en informatique et mathématique. Actuellemnt je suis en Formation de dévellepement web au seins de ALAJI a viller lès nancy, c’étais le bon chois d’intégre cette formation car je suis entrain de faire des choses qui me plaire. Devenir une développeuse Web. Je suis prête et motivée pour
+              parfaire mes compétences acquise durant mon L1 Info-Math pour
+              faire de ma passion mon métier</p>
+            <div class="btn btn-default btn-lg">
+              <a href="index/celinne.pdf" class="btn btn-default btn-xl hover" > Téléchargez mon CV !</a>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
+    <div class="container-fluid bg-light text">
+      <div class="container text-center">
+        <section id="competences">
+          <h2 class="cadre-text" style="font-wieght: bold; color:#224656;"> Compétences</h2>
+          <hr class="light">
+          <ul class="list" style="text-align: center;">
+            <li>Connaissance en langage informatique HTML, CSS, PYTHON, C.</li>
+            <li>Forte en Informatique et Microsoft Office.</li>
+            <li>Accueil des usagés .</li>
+            <li>Activités administratives diverses liées au service.</li>
+            <li>Aptitude à travailler en équipe.</li>
+            <li>Prise d'initiatives et résolution de problèmes.</li>
+            <li>Capacité à actualiser ses connaissances.</li>
+            <li>Capacité à travailler sous pression et à gérer le stress.</li>
           </ul>
-        </div>
-        </div>
-      </nav>
-      <header>
-
-        <div class="header-content">
-            <div class="header-content-inner">
-              <h1  id="myDIV" style="color: wheat;">Développeuse Web</h1>
-              <hr>
-              <!-- <p style="text-align: cente">Devenir une développeuse Web. Je suis prête et motivée pour
-                parfaire mes compétences acquise durant mon L1 Info-Math pour
-                faire de ma passion mon métier.
-              </p> -->
-              <div class="btn btn-default btn-lg" style="padding-left:530px; padiing: 30px; margin-bottom:50px;">
-                <a href="#about" style="display: block; background: #606060; color: #ffffff; text-align: center; font-weight: bold; font-size: 25px; line-height: 2rem; border-radius: 30px; text-decoration: none; padding: 15px 30px; " class="btn btn-default btn-xl hover page-scroll ">Qui suis-je ?</a>
-              </div>
-      </header>
-      <section class=" bg-dark" id="about">
-
-            <div class="container text-center">
-            <div class="call-to-action">
-                <h2  style="color: wheat; text-align: center; font-family: 'Pacifico', cursive; padding:70px; ">Belkhadiri Rihab - Etudiante en Développement web !</h2>
-                <hr>
-                <p style="font-size: 20px; color: wheat;font-family: 'Merienda', cursive;">J’ai eu un Bac S avec mention trés bien en arabie saudite, J’ai fait un an à la faculté des sciences et technology en informatique et mathématique. Actuellemnt je suis en Formation de dévellepement web au seins de ALAJI a viller lès nancy, c’étais le bon chois d’intégre cette formation car je suis entrain de faire des choses qui me plaire. Devenir une développeuse Web. Je suis prête et motivée pour
-                  parfaire mes compétences acquise durant mon L1 Info-Math pour
-                  faire de ma passion mon métier</p>
-                <div class="btn btn-default btn-xl">
-                  <a style="display: block; background: #606060; color: #ffffff; text-align: center; font-weight: bold; font-size: 20px; line-height: 50px; font-family: Arial; border-radius: 30px; text-decoration: none;" href="index/celinne.pdf" class="btn btn-default btn-xl hover" > Téléchargez mon CV !</a>
-
-                </div>
+        </section>
+      </div>
+    </div>
+    <div class="container-fluid bg-dark">
+      <div class="container text-center">
+        <section id="formation">
+          <div class="row">
+            <div class="col-lg-8 offset-2 text-center">
+              <h3 class="cadre-text"  style="color: wheat;" ><strong> Mes Formations</strong></h3>
+              <hr class="light">
+              <ul class="list" style="color: wheat;">
+                <li>
+                  <strong>2019-2020| Formation développeure web intégrateur niveau III</strong>
+                  <pre style="color: wheat;">ALAJI | villers lès-Nancy</pre>
+                </li>
+                <li>
+                  <strong>2018-2019 | L1 Informatique-Mathématique</strong>
+                  <pre style="color: wheat;">Faculté des sciences et technologies |Vandœuvre lès Nancy</pre>
+                </li>
+                <li>
+                  <strong>2017-2018 | Formation DEFLE</strong>
+                  <pre style="color: wheat;">Faculté de lettres et sciences humaines</pre>
+                </li>
+                <li>
+                  <strong>2015-2016 | Baccalauréat Scientifique, Mention très bien</strong>
+                  <pre style="color: wheat;">Lycée 86éme | DjeddahArabie Saoudite</pre>
+                </li>
+                <li>
+                  <strong>2013-2014 | Formation en Informatique générale</strong>
+                  <pre style="color: wheat;">Lycée 86éme | DjeddahArabie Saoudite</pre>
+                </li>
+              </ul>
             </div>
-        </div>
-        </div>
-      </section>
-            <!-- the top of the page -->
-
-
-      <!-- objectif with descriptions -->
-
-        <section class="bg-light text" id="competences">
-                <div class="container">
-                  <div class="row">
-                    <div class="col-lg-8 offset-2 text-center">
-                      <h2 class="cadre-text" style="font-wieght: bold; color:#224656;"> Compétences</h2>
-                      <hr class="light">
-                      <ul class="list" style="text-align: center;">
-                        <li>Connaissance en langage informatique HTML, CSS, PYTHON, C.</li>
-                        <li>Forte en Informatique et Microsoft Office.</li>
-                        <li>Accueil des usagés .</li>
-                        <li>Activités administratives diverses liées au service.</li>
-                        <li>Aptitude à travailler en équipe.</li>
-                        <li>Prise d'initiatives et résolution de problèmes.</li>
-                        <li>Capacité à actualiser ses connaissances.</li>
-                        <li>Capacité à travailler sous pression et à gérer le stress.</li>
-                      </ul>
-                    </div>
+          </div>
+        </section>
+      </div>
+    </div>
+    <div class="container-fluid bg-dark">
+      <div class="container text-center">
+        <section class="bg-dark" id="contact">
+          <div class="container">
+            <div class="containers-fluid">
+              <div class="row">
+                <div class="col-lg-8 offset-2 text-center">
+                  <h3 class="cadre-text text-align-centre" style="color:wheat; font-weight: bold;"> <strong>Contact</strong></h3>
+                  <p class="num">+ 33 07 61 22 25 37</p>
+                  <p class="mail">Rihabelkhadiri@hotmail.com</p>
+                  <p class="adresse">11,avenue du charmois 54500 NANCY, FRANCE</p>
+                  <div class="wrapper">
+                    <a target="_blank" href="https://www.instagram.com/rihabek/"><i style="color:#961108;"class="fa fa-3x fa-instagram"></i></a>
+                    <a target="_blank" href="https://www.facebook.com/rihab.bek.12"><i style="color:#961108;" class="fa fa-3x fa-facebook-square"></i></a>
+                    <a target="_blank" href="https://twitter.com/login"><i style="color:#961108;" class="fa fa-3x fa-twitter-square"></i>
                   </div>
-                  </div>
-                </div>
-          </section>
-          <section  class="bg-dark" id="formation">
-                  <div class="container">
-                    <div class="row">
-                      <div class="col-lg-8 offset-2 text-center">
-                        <h3 class="cadre-text"  style="color: wheat;" ><strong> Mes Formations</strong></h3>
-                        <hr class="light">
-                        <ul class="list" style="color: wheat;">
-                          <li><strong>2019-2020| Formation développeure web intégrateur niveau III</strong></li>
-                            <pre style="color: wheat;">ALAJI | villers lès-Nancy</pre>
-                          <li><strong>2018-2019 | L1 Informatique-Mathématique</strong></li>
-                            <pre style="color: wheat;">Faculté des sciences et technologies |Vandœuvre lès Nancy</pre>
-                          <li><strong>2017-2018 | Formation DEFLE</strong></li>
-                            <pre style="color: wheat;">Faculté de lettres et sciences humaines</pre>
-                          <li><strong>2015-2016 | Baccalauréat Scientifique, Mention très bien</strong></li>
-                            <pre style="color: wheat;">Lycée 86éme | DjeddahArabie Saoudite</pre>
-                          <li><strong>2013-2014 | Formation en Informatique générale</strong></li>
-                            <pre style="color: wheat;">Lycée 86éme | DjeddahArabie Saoudite</pre>
-                      </ul>
-
-                    </div>
-                  </div>
-                </div>
-          </section>
-          <section class="bg-light" id="experiences">
-              <div class="container">
-                <div class="row">
-                  <div class="col-lg-8 offset-2 text-center">
-                    <h3 class="cadre-text" ><strong>Expériences</strong></h3>
-                    <hr class="light">
-                    <ul class="list">
-                      <li><strong>2019-2020 | Service civique à Pôle emploi, Nancy Cristallerie(8 mois)</strong></li>
-                        <ul>
-                          <li>Sensibilisation à la dématérialisation</li>
-                          <li>Lutte contre l'acculturation numérique</li>
-                          <li>Lutte contre l'acculturation numérique</li>
-                        </ul>
-                      <li><strong>2017-2019 | Formatrice en langue étrangère, Centre de Formation Anglais Pro à Nancy</strong></li>
-                        <ul>
-                          <li>Animer des activités périscolaires en anglais</li>
-                          <li>Prendre part à des réunions institutionnelles</li>
-                          <li>Faire des remplacements dans les écoles de la ville de Nancy et alentours</li>
-                        </ul>
-                      <li><strong>2017-2018 | Animatrice volontaire, Institut scout et laïques (MJC) à Nancy</strong></li>
-                        <ul>
-                          <li>Mise en place des structures pour l’épanouissement des enfants</li>
-                          <li>Accompagner les enfants dans les activités et animationsproposées</li>
-                        </ul>
-                    </ul>
-
                 </div>
               </div>
             </div>
-          </section>
-            <section class="bg-dark" id="contact">
-              <div class="container">
-                <div class="containers-fluid">
-                  <div class="row">
-                    <div class="col-lg-8 offset-2 text-center">
-                      <h3 class="cadre-text text-align-centre" style="coclor:wheat;"> <strong>Contact</strong></h3>
-                        <p class="num">+ 33 07 61 22 25 37</p>
-                        <p class="mail">Rihabelkhadiri@hotmail.com</p>
-                        <p class="adresse">11,avenue du charmois 54500 NANCY, FRANCE</p>
-                        <div class="wrapper">
-                          <a target="_blank" href="https://www.instagram.com/rihabek/"><i class="fa fa-3x fa-instagram"></i></a>
-                          <a target="_blank" href="https://www.facebook.com/rihab.bek.12?ref=bookmarks"><i class="fa fa-3x fa-facebook-square"></i></a>
-                          <a target="_blank" href="https://twitter.com/login"><i class="fa fa-3x fa-twitter-square"></i>
-                          </div></a>
+          </div>
+        </section>
+      </div>
+    </div>
 
-                    </div>
+    <footer class="py-5 bg-dark text-white text-center bottom">
+      <div class="container">
+        Copyright @ Rihabel
+      </div>
+    </footer>
 
-                  </div>
-
-                </div>
-
-              </div>
-            </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <script type="text/javascript">
+      var elements = document.getElementById('navbar').querySelectorAll('[data-link]')
+      for (var i = 0;  i < elements.length; i++) {
+        elements[i].addEventListener('click', function (e) {
+          e.preventDefault();
+          var id = e.target.getAttribute('href')
+          var element = document.getElementById(id.replace('#', ''))
+          element.scrollIntoView({behavior: "smooth"})
+        })
+      }
+    </script>
+  </body>
+</html>
 
 
   <!--  <nav class="navbar navbar-default navbar-fixed-top affix-top">
@@ -267,22 +224,3 @@
     </header> -->
 
     <!--# toolbar = 0-->
-    <footer class="py-5 bg-dark text-white text-center bottom">
-      <div class="container">
-        Copyright @ Rihabel
-      </div>
-    </footer>
-
-    <script type="text/javascript">
-      var elements = document.getElementById('navbar').querySelectorAll('[data-link]')
-      for (var i = 0;  i < elements.length; i++) {
-        elements[i].addEventListener('click', function (e) {
-          e.preventDefault();
-          var id = e.target.getAttribute('href')
-          var element = document.getElementById(id.replace('#', ''))
-          element.scrollIntoView({behavior: "smooth"})
-        })
-      }
-    </script>
-  </body>
-</html>
