--- a/index.html
+++ b/index.html
@@ -8,30 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>CURRICULUM VITAE</title>
-    <!-- <style>
-      #myDIV {
 
-        height: 100px;
-        background: #113548;
-        -webkit-animation: mymove 2s infinite; /* Safari 4.0 - 8.0 */
-        animation: mymove 2s infinite;
-      }
-
-      /* Safari 4.0 - 8.0 */
-      @-webkit-keyframes mymove {
-        50% {background-color: #C59296;}
-        0% {box-shadow: 10px 20px 30px #D84C5F;}
-      }
-
-      @keyframes mymove {
-        50% {background-color: #C59296;}
-        50% {box-shadow: 10px 20px 30px #D84C5F;}
-      }
-
-      /* Safari 4.0 - 8.0 */
-
-
-    </style> -->
   </head>
   <body id="haut" >
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -62,7 +39,7 @@
     <header>
       <div class="container header-content">
         <div class=" header-content-inner">
-          <h1  id="myDIV" style="color: wheat;">Développeuse Web</h1>
+          <h1 style="color: wheat;">Développeuse Web</h1>
           <hr>
           <p>Devenir une développeuse Web. Je suis prête et motivée pour
             parfaire mes compétences acquise durant mon L1 Info-Math pour
@@ -80,7 +57,7 @@
           <div class="call-to-action">
             <h2  style="color: wheat; text-align: center; font-family: 'Pacifico', cursive; padding:70px; ">Belkhadiri Rihab - Etudiante en Développement web !</h2>
             <hr>
-            <p style="font-size: 20px; color: wheat;font-family: 'Merienda', cursive;">J’ai eu un Bac S avec mention trés bien en arabie saudite, J’ai fait un an à la faculté des sciences et technology en informatique et mathématique. Actuellemnt je suis en Formation de dévellepement web au seins de ALAJI a viller lès nancy, c’étais le bon chois d’intégre cette formation car je suis entrain de faire des choses qui me plaire. Devenir une développeuse Web. Je suis prête et motivée pour
+            <p style="font-size: 20px; color: wheat;font-family: 'Merienda', cursive;">J’ai eu un Bac S avec mention très bien en arabie saudite, J’ai fait un an à la faculté des sciences et technology en informatique et mathématique. Actuellemnt je suis en Formation de dévellepement web au seins de ALAJI a viller lès nancy, c’étais le bon chois d’intégre cette formation car je suis entrain de faire des choses qui me plaire. Devenir une développeuse Web. Je suis prête et motivée pour
               parfaire mes compétences acquise durant mon L1 Info-Math pour
               faire de ma passion mon métier</p>
             <div class="btn btn-default btn-lg">
@@ -111,8 +88,6 @@
     <div class="container-fluid bg-dark">
       <div class="container text-center">
         <section id="formation">
-          <div class="row">
-            <div class="col-lg-8 offset-2 text-center">
               <h3 class="cadre-text"  style="color: wheat;" ><strong> Mes Formations</strong></h3>
               <hr class="light">
               <ul class="list" style="color: wheat;">
@@ -137,6 +112,36 @@
                   <pre style="color: wheat;">Lycée 86éme | DjeddahArabie Saoudite</pre>
                 </li>
               </ul>
+        </section>
+      </div>
+    </div>
+    <div class="container-fluid bg-light">
+      <div class="container text-center">
+        <section class="bg-light" id="experiences">
+            <div class="container">
+                  <h3 class="cadre-text" ><strong>Expériences</strong></h3>
+                  <hr class="light">
+                  <ul class="list">
+                    <li><strong>2019-2020 | Service civique à Pôle emploi, Nancy Cristallerie(8 mois)</strong></li>
+                      <ul>
+                        <li>Sensibilisation à la dématérialisation</li>
+                        <li>Lutte contre l'acculturation numérique</li>
+                        <li>Lutte contre l'acculturation numérique</li>
+                      </ul>
+                    <li><strong>2017-2019 | Formatrice en langue étrangère, Centre de Formation Anglais Pro à Nancy</strong></li>
+                      <ul>
+                        <li>Animer des activités périscolaires en anglais</li>
+                        <li>Prendre part à des réunions institutionnelles</li>
+                        <li>Faire des remplacements dans les écoles de la ville de Nancy et alentours</li>
+                      </ul>
+                    <li><strong>2017-2018 | Animatrice volontaire, Institut scout et laïques (MJC) à Nancy</strong></li>
+                      <ul>
+                        <li>Mise en place des structures pour l’épanouissement des enfants</li>
+                        <li>Accompagner les enfants dans les activités et animationsproposées</li>
+                      </ul>
+                  </ul>
+
+              </div>
             </div>
           </div>
         </section>
@@ -173,7 +178,7 @@
     </footer>
 
     <script type="text/javascript">
-      var elements = document.getElementById('navbar').querySelectorAll('[data-link]')
+      var elements = document.getElementById('navbarSupportedContent').querySelectorAll('[data-link]')
       for (var i = 0;  i < elements.length; i++) {
         elements[i].addEventListener('click', function (e) {
           e.preventDefault();
@@ -224,3 +229,28 @@
     </header> -->
 
     <!--# toolbar = 0-->
+
+    <!-- <style>
+      #myDIV {
+
+        height: 100px;
+        background: #113548;
+        -webkit-animation: mymove 2s infinite; /* Safari 4.0 - 8.0 */
+        animation: mymove 2s infinite;
+      }
+
+      /* Safari 4.0 - 8.0 */
+      @-webkit-keyframes mymove {
+        50% {background-color: #C59296;}
+        0% {box-shadow: 10px 20px 30px #D84C5F;}
+      }
+
+      @keyframes mymove {
+        50% {background-color: #C59296;}
+        50% {box-shadow: 10px 20px 30px #D84C5F;}
+      }
+
+      /* Safari 4.0 - 8.0 */
+
+
+    </style> -->
