--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
+        <ul id="menu" class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" data-link href="#competences">Compétences</a>
           </li>
@@ -46,7 +46,7 @@
             faire de ma passion mon métier.
           </p>
           <div class="btn btn-default btn-lg" style="padding-left:530px; padiing: 30px; margin-bottom:50px;">
-            <a href="#about" class="btn btn-default btn-xl hover page-scroll ">Qui suis-je ?</a>
+            <a href="#about" class="btn btn-default btn-xl hover" > Téléchargez mon CV !</a>
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
               parfaire mes compétences acquise durant mon L1 Info-Math pour
               faire de ma passion mon métier</p>
             <div class="btn btn-default btn-lg">
-              <a href="index/celinne.pdf" class="btn btn-default btn-xl hover" > Téléchargez mon CV !</a>
+              <a id="cv" href="index/celinne.pdf" class="btn btn-default btn-xl hover" > Téléchargez mon CV !</a>
             </div>
           </div>
         </section>
@@ -188,69 +188,76 @@
         })
       }
     </script>
+      <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+      <script src="js/app.js"></script>
+      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
 
 
-  <!--  <nav class="navbar navbar-default navbar-fixed-top affix-top">
-      <div class="containers-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand page-scroll" href="#page-top">Belkhadiri Rihab</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" aria-expanded="false" height="1px;">
-          <ul class="navbar navbar-nav navbar-right">
-            <li class>
-              <a class="page-scroll" href="#Objectif"> Objectif </a>
-            </li>
-            <li class>
-              <a class="page-scroll" href="#competences">Compétences</a>
-            </li>
-            <li class>
-              <a class="#page-scroll" href="#formation">Mes Formations</a>
-            </li>
-            <li class>
-              <a class="#page-scroll" href="#experiences"></a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <header>
-      <div class="header-content-inner">
-        <h1 style="font-size:35px;">Développeuse Web</h1>
-        <hr>
-        <p>Devenir une développeuse Web. Je suis prête et motivée pour
-          parfaire mes compétences acquise durant mon L1 Info-Math pour
-          faire de ma passion mon métier.
-        </p>
-        <a href="#Objectif" class="btn btn-primary btn-xl page-scroll"> Qui suis-je ?</a>
-
-      </div>
-    </header> -->
-
-    <!--# toolbar = 0-->
-
-    <!-- <style>
-      #myDIV {
-
-        height: 100px;
-        background: #113548;
-        -webkit-animation: mymove 2s infinite; /* Safari 4.0 - 8.0 */
-        animation: mymove 2s infinite;
-      }
-
-      /* Safari 4.0 - 8.0 */
-      @-webkit-keyframes mymove {
-        50% {background-color: #C59296;}
-        0% {box-shadow: 10px 20px 30px #D84C5F;}
-      }
-
-      @keyframes mymove {
-        50% {background-color: #C59296;}
-        50% {box-shadow: 10px 20px 30px #D84C5F;}
-      }
-
-      /* Safari 4.0 - 8.0 */
-
-
-    </style> -->
+  // <!--  <nav class="navbar navbar-default navbar-fixed-top affix-top">
+  //     <div class="containers-fluid">
+  //       <div class="navbar-header">
+  //         <a class="navbar-brand page-scroll" href="#page-top">Belkhadiri Rihab</a>
+  //       </div>
+  //       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" aria-expanded="false" height="1px;">
+  //         <ul class="navbar navbar-nav navbar-right">
+  //           <li class>
+  //             <a class="page-scroll" href="#Objectif"> Objectif </a>
+  //           </li>
+  //           <li class>
+  //             <a class="page-scroll" href="#competences">Compétences</a>
+  //           </li>
+  //           <li class>
+  //             <a class="#page-scroll" href="#formation">Mes Formations</a>
+  //           </li>
+  //           <li class>
+  //             <a class="#page-scroll" href="#experiences"></a>
+  //           </li>
+  //         </ul>
+  //       </div>
+  //     </div>
+  //   </nav>
+  //   <header>
+  //     <div class="header-content-inner">
+  //       <h1 style="font-size:35px;">Développeuse Web</h1>
+  //       <hr>
+  //       <p>Devenir une développeuse Web. Je suis prête et motivée pour
+  //         parfaire mes compétences acquise durant mon L1 Info-Math pour
+  //         faire de ma passion mon métier.
+  //       </p>
+  //       <a href="#Objectif" class="btn btn-primary btn-xl page-scroll"> Qui suis-je ?</a>
+  //
+  //     </div>
+  //   </header> -->
+  //
+  //   <!--# toolbar = 0-->
+  //
+  //   <!-- <style>
+  //     #myDIV {
+  //
+  //       height: 100px;
+  //       background: #113548;
+  //       -webkit-animation: mymove 2s infinite; /* Safari 4.0 - 8.0 */
+  //       animation: mymove 2s infinite;
+  //     }
+  //
+  //     /* Safari 4.0 - 8.0 */
+  //     @-webkit-keyframes mymove {
+  //       50% {background-color: #C59296;}
+  //       0% {box-shadow: 10px 20px 30px #D84C5F;}
+  //     }
+  //
+  //     @keyframes mymove {
+  //       50% {background-color: #C59296;}
+  //       50% {box-shadow: 10px 20px 30px #D84C5F;}
+  //     }
+  //
+  //     /* Safari 4.0 - 8.0 */
+  //
+  //
+  //   </style> -->
