--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             faire de ma passion mon métier.
           </p>
           <div class="btn btn-default btn-lg" style="padding-left:530px; padiing: 30px; margin-bottom:50px;">
-            <a href="#about" class="btn btn-default btn-xl hover" > Téléchargez mon CV !</a>
+            <a href="#about" class="btn btn-default btn-xl hover" > Qui suis-je ?</a>
           </div>
         </div>
       </div>
