--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <div class=" header-content-inner">
           <h1 style="color: wheat;">Développeuse Web</h1>
           <hr>
-          <p>Devenir une développeuse Web. Je suis prête et motivée pour
+          <!-- <p>Devenir une développeuse Web. Je suis prête et motivée pour
             parfaire mes compétences acquise durant mon L1 Info-Math pour
             faire de ma passion mon métier.
-          </p>
-          <div class="btn btn-default btn-lg" style="padding-left:530px; padiing: 30px; margin-bottom:50px;">
+          </p> -->
+          <div class="btn btn-default btn-lg" >
             <a href="#about" class="btn btn-default btn-xl hover" > Qui suis-je ?</a>
           </div>
         </div>
@@ -67,7 +67,7 @@
         </section>
       </div>
     </div>
-    <div class="container-fluid bg-light text">
+    <div class="container-fluid bg-light text ">
       <div class="container text-center">
         <section id="competences">
           <h2 class="cadre-text" style="font-wieght: bold; color:#224656;"> Compétences</h2>
@@ -85,7 +85,7 @@
         </section>
       </div>
     </div>
-    <div class="container-fluid bg-dark">
+    <div class="container-fluid bg-dark text">
       <div class="container text-center">
         <section id="formation">
               <h3 class="cadre-text"  style="color: wheat;" ><strong> Mes Formations</strong></h3>
