--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
     <title>CURRICULUM VITAE</title>
 
   </head>
-  <body id="haut" >
+  <body id="haut"  >
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="#haut">Belkhadiri Rihab</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,26 +38,23 @@
 
     <header>
       <div class="container header-content">
-        <div class=" header-content-inner">
-          <h1 style="color: wheat;">Développeuse Web</h1>
+        <div class=" header-content-inner ">
+          <h1 style="color:#ffbdbd; text-shadow: 0.1em 0.1em 0.1em black;">Développeuse Web</h1>
           <hr>
-          <!-- <p>Devenir une développeuse Web. Je suis prête et motivée pour
-            parfaire mes compétences acquise durant mon L1 Info-Math pour
-            faire de ma passion mon métier.
-          </p> -->
-          <div class="btn btn-default btn-lg" >
-            <a href="#about" class="btn btn-default btn-xl hover" > Qui suis-je ?</a>
-          </div>
         </div>
+      <div class="btn btn-default">
+          <a href="#about" class="btn btn-default btn-xl hover" style="display:initial !important;"> Qui suis-je ?</a>
+        </div>
+      </div>
       </div>
     </header>
     <div class="container-fluid bg-dark">
-      <div class="container text-center">
-        <section id="about">
+      <div class="container text-center ">
+        <section id="about" >
           <div class="call-to-action">
-            <h2  style="color: wheat; text-align: center; font-family: 'Pacifico', cursive; padding:70px; ">Belkhadiri Rihab - Etudiante en Développement web !</h2>
+            <h2 >Belkhadiri Rihab - Etudiante en Développement web </h2>
             <hr>
-            <p style="font-size: 20px; color: wheat;font-family: 'Merienda', cursive;">J’ai eu un Bac S avec mention très bien en arabie saudite, J’ai fait un an à la faculté des sciences et technology en informatique et mathématique. Actuellemnt je suis en Formation de dévellepement web au seins de ALAJI a viller lès nancy, c’étais le bon chois d’intégre cette formation car je suis entrain de faire des choses qui me plaire. Devenir une développeuse Web. Je suis prête et motivée pour
+            <p >J’ai eu un Bac S avec mention très bien en arabie saudite, J’ai fait un an à la faculté des sciences et technology en informatique et mathématique. Actuellemnt je suis en Formation de dévellepement web au seins de ALAJI a viller lès nancy, c’étais le bon chois d’intégre cette formation car je suis entrain de faire des choses qui me plaire. Devenir une développeuse Web. Je suis prête et motivée pour
               parfaire mes compétences acquise durant mon L1 Info-Math pour
               faire de ma passion mon métier</p>
             <div class="btn btn-default btn-lg">
@@ -67,89 +64,84 @@
         </section>
       </div>
     </div>
-    <div class="container-fluid bg-light text ">
+    <div class="container-fluid bg-light text blop ">
       <div class="container text-center">
-        <section id="competences">
-          <h2 class="cadre-text" style="font-wieght: bold; color:#224656;"> Compétences</h2>
+        <section id="competences" >
+          <h2 >Compétences</h2>
           <hr class="light">
-          <ul class="list" style="text-align: center;">
-            <li>Connaissance en langage informatique HTML, CSS, PYTHON, C.</li>
-            <li>Forte en Informatique et Microsoft Office.</li>
-            <li>Accueil des usagés .</li>
-            <li>Activités administratives diverses liées au service.</li>
-            <li>Aptitude à travailler en équipe.</li>
-            <li>Prise d'initiatives et résolution de problèmes.</li>
-            <li>Capacité à actualiser ses connaissances.</li>
-            <li>Capacité à travailler sous pression et à gérer le stress.</li>
-          </ul>
+            <p>Internet :Utilisation très fréquente, Navigateurs et services internet</p>
+            <p>Développement : PYTHON, PHP,C.</>
+            <p>Standards informatiques :SQL, HTML, CSS, DOM (JavaScript),Bootstrap.</p>
+            <p>Systèmes d’exploitation :Windows , Linux</p>
+            <p>Forte en Informatique et Microsoft Office.</p>
+            <p>Prise d'initiatives et résolution de problèmes.</p>
+            <p>Aptitude à travailler en équipe.</p>
+            <p>Capacité à travailler sous pression et à gérer le stress.</p>
+            <p>Capacité à actualiser ses connaissances.</p>
+
         </section>
       </div>
     </div>
-    <div class="container-fluid bg-dark text">
-      <div class="container text-center">
-        <section id="formation">
-              <h3 class="cadre-text"  style="color: wheat;" ><strong> Mes Formations</strong></h3>
+    <div class="container-fluid bg-dark text blop">
+      <div class="container text-center ">
+        <section id="formation"  >
+              <h3 ><strong> Mes Formations</strong></h3>
               <hr class="light">
-              <ul class="list" style="color: wheat;">
-                <li>
-                  <strong>2019-2020| Formation développeure web intégrateur niveau III</strong>
-                  <pre style="color: wheat;">ALAJI | villers lès-Nancy</pre>
-                </li>
-                <li>
+
+                  <strong>2019-2020| Formation développeur web intégrateur niveau III</strong>
+                  <p >ALAJI | villers lès-Nancy</p>
+
+
                   <strong>2018-2019 | L1 Informatique-Mathématique</strong>
-                  <pre style="color: wheat;">Faculté des sciences et technologies |Vandœuvre lès Nancy</pre>
-                </li>
-                <li>
+                  <p >Faculté des sciences et technologies |Vandœuvre lès Nancy</p>
+
+
                   <strong>2017-2018 | Formation DEFLE</strong>
-                  <pre style="color: wheat;">Faculté de lettres et sciences humaines</pre>
-                </li>
-                <li>
+                  <p>Faculté de lettres et sciences humaines</p>
+
+
                   <strong>2015-2016 | Baccalauréat Scientifique, Mention très bien</strong>
-                  <pre style="color: wheat;">Lycée 86éme | DjeddahArabie Saoudite</pre>
-                </li>
-                <li>
+                  <p >Lycée 86éme | DjeddahArabie Saoudite</p>
+
+
                   <strong>2013-2014 | Formation en Informatique générale</strong>
-                  <pre style="color: wheat;">Lycée 86éme | DjeddahArabie Saoudite</pre>
-                </li>
-              </ul>
+                  <p >Lycée 86éme | DjeddahArabie Saoudite</p>
+
+
         </section>
       </div>
     </div>
-    <div class="container-fluid bg-light">
-      <div class="container text-center">
-        <section class="bg-light" id="experiences">
+    <div class="container-fluid bg-light blop">
+      <div class="container text-center ">
+        <section id="experiences">
             <div class="container">
                   <h3 class="cadre-text" ><strong>Expériences</strong></h3>
                   <hr class="light">
-                  <ul class="list">
-                    <li><strong>2019-2020 | Service civique à Pôle emploi, Nancy Cristallerie(8 mois)</strong></li>
-                      <ul>
-                        <li>Sensibilisation à la dématérialisation</li>
-                        <li>Lutte contre l'acculturation numérique</li>
-                        <li>Lutte contre l'acculturation numérique</li>
-                      </ul>
-                    <li><strong>2017-2019 | Formatrice en langue étrangère, Centre de Formation Anglais Pro à Nancy</strong></li>
-                      <ul>
-                        <li>Animer des activités périscolaires en anglais</li>
-                        <li>Prendre part à des réunions institutionnelles</li>
-                        <li>Faire des remplacements dans les écoles de la ville de Nancy et alentours</li>
-                      </ul>
-                    <li><strong>2017-2018 | Animatrice volontaire, Institut scout et laïques (MJC) à Nancy</strong></li>
-                      <ul>
-                        <li>Mise en place des structures pour l’épanouissement des enfants</li>
-                        <li>Accompagner les enfants dans les activités et animationsproposées</li>
-                      </ul>
-                  </ul>
+                    <strong>2019-2020 | Service civique à Pôle emploi, Nancy Cristallerie(8 mois)</strong>
 
+                        <p>Sensibilisation à la dématérialisation</p>
+                        <p>Lutte contre l'acculturation numérique</p>
+                        <p>Lutte contre l'acculturation numérique</p>
+
+                    <strong>2017-2019 | Formatrice en langue étrangère, Centre de Formation Anglais Pro à Nancy</strong>
+
+                        <p>Animer des activités périscolaires en anglais</p>
+                        <p>Prendre part à des réunions institutionnelles</p>
+                        <p>Faire des remplacements dans les écoles de la ville de Nancy et alentours</p>
+
+                    <strong>2017-2018 | Animatrice volontaire, Institut scout et laïques (MJC) à Nancy</strong>
+
+                        <p>Mise en place des structures pour l’épanouissement des enfants</p>
+                        <p>Accompagner les enfants dans les activités et animationsproposées</p>
               </div>
             </div>
           </div>
         </section>
       </div>
     </div>
-    <div class="container-fluid bg-dark">
-      <div class="container text-center">
-        <section class="bg-dark" id="contact">
+    <div class="container-fluid bg-dark blop">
+      <div class="container text-center ">
+        <section  id="contact">
           <div class="container">
             <div class="containers-fluid">
               <div class="row">
@@ -159,9 +151,9 @@
                   <p class="mail">Rihabelkhadiri@hotmail.com</p>
                   <p class="adresse">11,avenue du charmois 54500 NANCY, FRANCE</p>
                   <div class="wrapper">
-                    <a target="_blank" href="https://www.instagram.com/rihabek/"><i style="color:#961108;"class="fa fa-3x fa-instagram"></i></a>
-                    <a target="_blank" href="https://www.facebook.com/rihab.bek.12"><i style="color:#961108;" class="fa fa-3x fa-facebook-square"></i></a>
-                    <a target="_blank" href="https://twitter.com/login"><i style="color:#961108;" class="fa fa-3x fa-twitter-square"></i>
+                    <a target="_blank" href="https://www.instagram.com/rihabek/"><i style="color:pink;"class="fa fa-3x fa-instagram"></i></a>
+                    <a target="_blank" href="https://www.facebook.com/rihab.bek.12"><i style="color:pink;" class="fa fa-3x fa-facebook-square"></i></a>
+                    <a target="_blank" href="https://twitter.com/login"><i style="color:pink;" class="fa fa-3x fa-twitter-square"></i>
                   </div>
                 </div>
               </div>
@@ -197,67 +189,3 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
-
-
-  // <!--  <nav class="navbar navbar-default navbar-fixed-top affix-top">
-  //     <div class="containers-fluid">
-  //       <div class="navbar-header">
-  //         <a class="navbar-brand page-scroll" href="#page-top">Belkhadiri Rihab</a>
-  //       </div>
-  //       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" aria-expanded="false" height="1px;">
-  //         <ul class="navbar navbar-nav navbar-right">
-  //           <li class>
-  //             <a class="page-scroll" href="#Objectif"> Objectif </a>
-  //           </li>
-  //           <li class>
-  //             <a class="page-scroll" href="#competences">Compétences</a>
-  //           </li>
-  //           <li class>
-  //             <a class="#page-scroll" href="#formation">Mes Formations</a>
-  //           </li>
-  //           <li class>
-  //             <a class="#page-scroll" href="#experiences"></a>
-  //           </li>
-  //         </ul>
-  //       </div>
-  //     </div>
-  //   </nav>
-  //   <header>
-  //     <div class="header-content-inner">
-  //       <h1 style="font-size:35px;">Développeuse Web</h1>
-  //       <hr>
-  //       <p>Devenir une développeuse Web. Je suis prête et motivée pour
-  //         parfaire mes compétences acquise durant mon L1 Info-Math pour
-  //         faire de ma passion mon métier.
-  //       </p>
-  //       <a href="#Objectif" class="btn btn-primary btn-xl page-scroll"> Qui suis-je ?</a>
-  //
-  //     </div>
-  //   </header> -->
-  //
-  //   <!--# toolbar = 0-->
-  //
-  //   <!-- <style>
-  //     #myDIV {
-  //
-  //       height: 100px;
-  //       background: #113548;
-  //       -webkit-animation: mymove 2s infinite; /* Safari 4.0 - 8.0 */
-  //       animation: mymove 2s infinite;
-  //     }
-  //
-  //     /* Safari 4.0 - 8.0 */
-  //     @-webkit-keyframes mymove {
-  //       50% {background-color: #C59296;}
-  //       0% {box-shadow: 10px 20px 30px #D84C5F;}
-  //     }
-  //
-  //     @keyframes mymove {
-  //       50% {background-color: #C59296;}
-  //       50% {box-shadow: 10px 20px 30px #D84C5F;}
-  //     }
-  //
-  //     /* Safari 4.0 - 8.0 */
-  //
-  //
-  //   </style> -->
