--- a/index.html
+++ b/index.html
@@ -38,15 +38,17 @@
 
     <header>
       <div class="container header-content">
-        <div class=" header-content-inner ">
-          <h1 style="color:#ffbdbd; text-shadow: 0.1em 0.1em 0.1em black;">Développeuse Web</h1>
-          <hr>
-        </div>
-      <div class="btn btn-default">
-          <a href="#about" class="btn btn-default btn-xl hover" style="display:initial !important;"> Qui suis-je ?</a>
+        <div class="text-center">
+          <div class=" header-content-inner ">
+            <h1 style="color:#ffbdbd; text-shadow: 0.1em 0.1em 0.1em black;">Développeuse Web</h1>
+            <hr>
+          </div>
+          <div class="btn btn-default">
+            <a href="#about" class="btn btn-default btn-xl hover"> Qui suis-je ?</a>
+          </div>
         </div>
       </div>
-      </div>
+
     </header>
     <div class="container-fluid bg-dark">
       <div class="container text-center ">
