--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>CURRICULUM VITAE</title>
 
   </head>
@@ -42,8 +42,8 @@
           <h1 style="color:#ffbdbd; text-shadow: 0.1em 0.1em 0.1em black;">Développeuse Web</h1>
           <hr>
         </div>
-      <div class="btn btn-default">
-          <a href="#about" class="btn btn-default btn-xl hover" style="display:initial !important;"> Qui suis-je ?</a>
+        <div class="btn btn-default btn-lg">
+            <a href="#about" class="btn btn-default btn-xl hover" > Qui suis-je ?</a>
         </div>
       </div>
       </div>
